--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -33,7 +33,7 @@
                     <th>ISBN</th>
                     <th>Price</th>
                     <th>Category</th>
-                    <th></th>
+
                 </tr>
             </thead>
             <tbody>
@@ -44,6 +44,8 @@
                         <td>@obj.Author</td>
                         <td>@obj.ISBN</td>
                         <td>@obj.Price</td>
+                        <td>@obj.Category.Name</td>
+
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
